--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,8 @@ body {
 }
 
 .page-wrapper {
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 0 20px;
+  margin: auto;
+  padding: auto;
 }
 
 /* Header and navigation */
@@ -50,7 +49,6 @@ header {
   background-image: url('../images/hero-bg2.jpg');
     height: 200px;
     width: 100%;
-    margin-bottom: 25px;
     background-size: cover;
     background-position: center;
   display: flex;
@@ -63,7 +61,6 @@ header {
   color: #fff;
   font-size: 26px;
   margin: 0;
-  border:#090b27;
   color: #090b27;
   background-color: #6ee2ff;
   margin: 0px;
@@ -73,3 +70,54 @@ header {
   margin-bottom:20px;
 }
 
+/* Page sections and content */
+.page-wrapper {
+  padding: 20px 0;
+  background-color: rgb(90, 184, 247);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.page-section h2 {
+  margin:20px
+}
+
+.work-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;    
+  gap: 10px;                      
+}
+
+.work-item {
+  border: 5px solid #090b27;
+  padding: 10px;
+  position: relative;
+  height: 200px;
+}
+
+#work1 {
+  grid-column: 1 / 3; 
+  height: 300px;
+  width: 1000px;
+  background-image: url("../images/work1.png");
+  background-size: cover;
+}
+
+#work2 {
+  background-image: url("../images/work2.png");
+  background-size: cover;
+}
+
+#work3 {
+  background-image: url("../images/work3.jpeg");
+  background-size: cover;
+}
+
+.work-heading {
+  position: absolute;
+  bottom: 10px;      
+  left: 10px;       
+}
